# SpeedSolver

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md
SpeedSolverBackend/SpeedSolverAPI/: .env.example  Makefile  mail.py  main.py  pyproject.toml
SpeedSolverBackend/SpeedSolverAPI/alembic/: env.py
SpeedSolverBackend/SpeedSolverAPI/alembic/versions/: 083c01a7b7d7_.py  09ac58fca3de_.py  1039991976d0_.py  238f6ee8f9e5_.py  26e74bb7d56d_.py  29f26748a5e4_.py  2ce714265ad3_.py  312c0a7dae30_.py  36551275d3fe_.py  3944b36aa619_.py  411156bf31a0_.py  4e07ff9d7490_.py  502127285459_.py  54cf0752aed6_.py  57f6e62620c6_.py  594cea1f36ec_.py  6452a4cc13cd_.py  64626426bb7c_.py  6643f9ccf5d9_.py  6e14cfa4a3f3_.py  907e954e75a1_.py  948a01d76e82_.py  96db638aa74c_.py  a43295923d3c_.py  c06adcf3e66f_.py  ceb82bf36346_.py  d4ace28995bb_.py  d911c2926905_.py  e238014fade3_.py  e3eaf5e6dce6_.py  ef231739b375_.py  fb5b49f9bbe6_.py  fe28fead0460_.py
SpeedSolverBackend/SpeedSolverAPI/app/admin/: user_admin.py
SpeedSolverBackend/SpeedSolverAPI/app/cfg/: settings.py
SpeedSolverBackend/SpeedSolverAPI/app/database/: database.py
SpeedSolverBackend/SpeedSolverAPI/app/exc/: bad_color.py  bad_email.py
SpeedSolverBackend/SpeedSolverAPI/app/routing/: access_router.py  account_router.py  cicd_router.py  email_router.py  inviting_router.py  main_router.py  objective_router.py  organization_router.py  project_router.py  search_router.py  team_router.py  test_router.py  (+1 more)
SpeedSolverBackend/SpeedSolverAPI/docker/: Dockerfile.backend  docker-compose.backend.yml
(+148 files in other folders)
