[tool.poetry]
name = "speedsolverapi"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <89967499+xxxw1tnessbtwxxx@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
alembic = "^1.14.0"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
yarl = "^1.18.3"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
